--- a/desafio-13/index.html
+++ b/desafio-13/index.html
@@ -14,36 +14,40 @@
 </head>
 
 <body>
-  <header>
-    <nav class="container">
-      <figure class="left">
-        <img src="./assets/img/riot.svg" alt="Ícone da riot">
-        <img src="./assets/img/logo.svg" alt="Ícone da logo">
-      </figure>
-      <figure class="right">
-        <img src="./assets/img/netflix.svg" alt="Ícone da netflix">
-      </figure>
-    </nav>
-  </header>
-
-  <section class="banner">
-    <div class="container">
-      <figure class="name-banner">
-        <img src="./assets/img/arcane.png" alt="Ícone da série arcane">
-      </figure>
-      <a href="#">Assista ao trailer</a>
-      <div class="new-episode">
-        <figure class="img-new-episode">
-          <img src="./assets/img/video.png" alt="Ícone do vídeo">
-          <img src="./assets/img/play.svg" alt="Ícone do play">
+  <main>
+    <header>
+      <nav class="container">
+        <figure class="left">
+          <img src="./assets/img/riot.svg" alt="Ícone da riot">
+          <img src="./assets/img/logo.svg" alt="Ícone da logo">
         </figure>
-        <div class="ds-new-episode">
-          <h2>Assista ao novo episódios</h2>
-          <p>13 de novembro, 2021</p>
+        <figure class="right">
+          <img src="./assets/img/netflix.svg" alt="Ícone da netflix">
+        </figure>
+      </nav>
+    </header>
+
+    <section class="banner">
+      <div class="container">
+        <figure class="name-banner">
+          <img src="./assets/img/arcane.png" alt="Ícone da série arcane">
+        </figure>
+        <a href="#">Assista ao trailer</a>
+
+        <div class="new-episode">
+          <figure class="img-new-episode">
+            <img src="./assets/img/video.png" alt="Ícone do vídeo">
+            <img src="./assets/img/play.svg" alt="Ícone do play">
+          </figure>
+          <div class="ds-new-episode">
+            <h2>Assista ao novo episódios</h2>
+            <p>13 de novembro, 2021</p>
+          </div>
         </div>
+
       </div>
-    </div>
-  </section>
+    </section>
+  </main>
 </body>
 
 </html>
