--- a/desafio-21/index.html
+++ b/desafio-21/index.html
@@ -79,35 +79,7 @@
     <section class="perguntas">
       <div class="container">
         <h2><span>Perguntas</span> frequentes</h2>
-        <div class="container-perguntas">
-          <div class="single-perguntas">
-            <div class="pergunta">
-              <h3>Meus jogos anteriores do Xbox vão funcionar no Xbox Series X?</h3>
-              <img src="./assets/img/arrow.svg" alt="Ícone arrow">
-            </div>
-            <div class="resposta">
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-            </div>
-          </div>
-          <div class="single-perguntas">
-            <div class="pergunta">
-              <h3>O que está incluído no Xbox Series X?</h3>
-              <img src="./assets/img/arrow.svg" alt="Ícone arrow">
-            </div>
-            <div class="resposta">
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-            </div>
-          </div>
-          <div class="single-perguntas">
-            <div class="pergunta">
-              <h3>Como sei se minha TV é compatível com 4K?</h3>
-              <img src="./assets/img/arrow.svg" alt="Ícone arrow">
-            </div>
-            <div class="resposta">
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-            </div>
-          </div>
-        </div>
+        <div class="container-perguntas"></div>
       </div>
     </section>
   </main>
