--- a/desafio-13/index.html
+++ b/desafio-13/index.html
@@ -33,7 +33,6 @@
           <img src="./assets/img/arcane.png" alt="Ícone da série arcane">
         </figure>
         <a href="#">Assista ao trailer</a>
-
         <div class="new-episode">
           <figure class="img-new-episode">
             <img src="./assets/img/video.png" alt="Ícone do vídeo">
@@ -44,7 +43,9 @@
             <p>13 de novembro, 2021</p>
           </div>
         </div>
-
+      </div>
+      <div class="bg-new-episode">
+        <div class="bg"></div>
       </div>
     </section>
   </main>
